--- a/app/src/main/res/layout/day_recycler_item.xml
+++ b/app/src/main/res/layout/day_recycler_item.xml
@@ -10,6 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/recycler_item_constraint"
         android:layout_width="match_parent"
+        android:background="@drawable/background_rounded_recycler"
+
         android:layout_height="wrap_content">
 
         <ImageView
