--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="weather_icon_size">80dp</dimen>
+    <dimen name="background_radius">12dp</dimen>
+    <dimen name="background_radius_recycler">3dp</dimen>
+    <dimen name="background_stroke_width">3dp</dimen>
+    <dimen name="background_stroke_width_recycler">1dp</dimen>
 </resources>
