--- a/app/src/main/res/drawable/background_rounded.xml
+++ b/app/src/main/res/drawable/background_rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/background" />
+    <solid android:color="@color/primaryColor" />
     <stroke
         android:width="@dimen/background_stroke_width"
         android:color="@color/backgroundStroke" />
