--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -15,6 +15,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/city_user_input"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="6"
