--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group>
         <item
+            android:id="@+id/info_menu_drawer"
+            android:icon="@drawable/ic_baseline_info_24"
+            android:title="@string/favourite"
+            app:showAsAction="ifRoom" />
+        <item
             android:id="@+id/favourite_menu_drawer"
             android:icon="@drawable/ic_baseline_star_border_24"
             android:title="@string/favourite"
