--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_width="@dimen/weather_icon_size"
             android:layout_height="@dimen/weather_icon_size"
             android:contentDescription="@string/day_weather_pic"
-            android:src="@drawable/ic_sunny_24"
+            android:src="@drawable/ic_weather_sunny_day"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/half_card_guide_line"
