--- a/app/src/main/res/layout/day_recycler_item.xml
+++ b/app/src/main/res/layout/day_recycler_item.xml
@@ -10,16 +10,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/recycler_item_constraint"
         android:layout_width="match_parent"
-        android:background="@drawable/background_rounded_recycler"
+        android:layout_height="wrap_content"
 
-        android:layout_height="wrap_content">
+        android:background="@drawable/background_rounded_recycler">
 
         <ImageView
             android:id="@+id/iv_day_weather_recycler_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/day_weather_pic"
-            android:src="@drawable/ic_sunny_24"
+            android:src="@drawable/ic_weather_sunny_day"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/tv_day_of_week_recycler_item"
