--- a/app/src/main/res/layout/day_recycler_item.xml
+++ b/app/src/main/res/layout/day_recycler_item.xml
@@ -18,11 +18,13 @@
             android:id="@+id/iv_day_weather_recycler_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_48"
+            android:layout_marginTop="@dimen/margin_12"
+            android:layout_marginBottom="@dimen/margin_12"
             android:contentDescription="@string/day_weather_pic"
             android:src="@drawable/ic_weather_sunny_day"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/tv_day_of_week_recycler_item"
             app:layout_constraintTop_toTopOf="parent">
 
         </ImageView>
