--- a/app/src/main/res/menu/bottom_drawer_menu.xml
+++ b/app/src/main/res/menu/bottom_drawer_menu.xml
@@ -2,11 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group>
         <item
-            android:id="@+id/favourites_menu_drawer"
-            android:title="@string/favourites" />
-
-        <item
             android:id="@+id/search_menu_drawer"
+            android:icon="@drawable/ic_baseline_search_24"
             android:title="@string/search" />
+        <item
+            android:id="@+id/settings_menu_drawer"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/settings" />
     </group>
+
 </menu>
