--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
     <dimen name="weather_icon_size">80dp</dimen>
     <dimen name="background_radius">12dp</dimen>
+    <dimen name="margin_12">12dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="margin_48">48dp</dimen>
     <dimen name="background_radius_recycler">3dp</dimen>
     <dimen name="background_stroke_width">3dp</dimen>
     <dimen name="background_stroke_width_recycler">1dp</dimen>
