--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,7 @@
         app:layout_constraintBottom_toTopOf="@+id/halfScreenGuideline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:motionDebug="SHOW_ALL">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/image_day_weather"
@@ -39,8 +38,8 @@
             android:id="@+id/tv_temp_day"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/temp_default"
             android:layout_marginBottom="10dp"
+            android:text="@string/temp_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/tv_temp_night"
@@ -52,8 +51,8 @@
             android:id="@+id/tv_temp_night"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/temp_default_night"
             android:layout_marginBottom="10dp"
+            android:text="@string/temp_default_night"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/tv_temp_day"
             app:layout_constraintRight_toLeftOf="@id/half_card_guide_line"
@@ -85,8 +84,8 @@
             android:id="@+id/tv_wind_speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/wind_default_speed"
             android:layout_marginBottom="5dp"
+            android:text="@string/wind_default_speed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/half_card_guide_line"
             app:layout_constraintRight_toRightOf="parent"
@@ -110,8 +109,8 @@
             android:id="@+id/tv_humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/humidity_default"
             android:layout_marginBottom="10dp"
+            android:text="@string/humidity_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/half_card_guide_line"
             app:layout_constraintRight_toRightOf="parent"
