--- a/app/src/main/res/layout/bottom_drawer_fragment.xml
+++ b/app/src/main/res/layout/bottom_drawer_fragment.xml
@@ -8,9 +8,7 @@
         android:id="@+id/image_user"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="@dimen/margin_12"
-        android:layout_marginTop="@dimen/margin_12"
-        android:layout_marginBottom="@dimen/margin_12"
+        android:layout_margin="@dimen/margin_12"
         android:background="@drawable/ic_baseline_account_circle_24"
         app:layout_constraintBottom_toTopOf="@id/view_delimiter"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +19,7 @@
         android:id="@+id/text_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_12"
-        android:layout_marginTop="@dimen/margin_12"
-        android:layout_marginBottom="@dimen/margin_12"
+        android:layout_margin="@dimen/margin_12"
         android:text="@string/sign_in_username"
         app:layout_constraintStart_toEndOf="@+id/image_user"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,20 +28,19 @@
         android:id="@+id/text_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_12"
-        android:layout_marginTop="@dimen/margin_12"
-        android:layout_marginBottom="@dimen/margin_12"
+        android:layout_margin="@dimen/margin_12"
         android:text="@string/sign_in_email"
         app:layout_constraintStart_toEndOf="@id/image_user"
         app:layout_constraintTop_toBottomOf="@+id/text_username" />
 
 
     <ImageView
-        android:id="@+id/close_imageview"
+        android:id="@+id/image_close_drawer"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/ic_baseline_close_24"
         android:visibility="visible"
+        android:layout_margin="@dimen/margin_12"
         app:layout_constraintBottom_toTopOf="@id/view_delimiter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
