--- a/app/src/main/res/layout/bottom_drawer_fragment.xml
+++ b/app/src/main/res/layout/bottom_drawer_fragment.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:behavior_hideable="true"
+    app:layout_behavior="@string/bottom_sheet_behavior">
 
     <ImageView
         android:id="@+id/image_user"
@@ -10,10 +12,10 @@
         android:layout_height="48dp"
         android:layout_margin="@dimen/margin_12"
         android:background="@drawable/ic_baseline_account_circle_24"
+        android:contentDescription="@string/sign_in_username"
         app:layout_constraintBottom_toTopOf="@id/view_delimiter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/sign_in_username" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/text_username"
@@ -38,9 +40,9 @@
         android:id="@+id/image_close_drawer"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_margin="@dimen/margin_12"
         android:background="@drawable/ic_baseline_close_24"
         android:visibility="visible"
-        android:layout_margin="@dimen/margin_12"
         app:layout_constraintBottom_toTopOf="@id/view_delimiter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -62,6 +64,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/view_delimiter"
-        app:menu="@menu/bottom_drawer_menu" />
+        app:menu="@menu/bottom_drawer_fragment_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
