--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,6 @@
     <color name="primaryTextColor">#ffffff</color>
     <color name="secondaryTextColor">#000000</color>
     <color name="iconWeatherColor">#1D1D1B</color>
+    <color name="decoratorColor">#386864</color>
+
 </resources>
