--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="weather_icon_size">80dp</dimen>
+    <dimen name="weather_icon_size_small">30dp</dimen>
+
+
     <dimen name="background_radius">12dp</dimen>
     <dimen name="background_radius_recycler">3dp</dimen>
     <dimen name="background_stroke_width">3dp</dimen>
@@ -10,4 +13,10 @@
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_48">48dp</dimen>
+
+    <dimen name="decorator_height">3dp</dimen>
+
+    <dimen name="small_text_size">10sp</dimen>
+    <dimen name="default_text_size">20sp</dimen>
+    <dimen name="large_text_size">30sp</dimen>
 </resources>
