--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="small_text_size">10sp</dimen>
     <dimen name="default_text_size">20sp</dimen>
     <dimen name="large_text_size">30sp</dimen>
+    <dimen name="margin_3">3dp</dimen>
 </resources>
