--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,12 +3,12 @@
     <dimen name="weather_icon_size">80dp</dimen>
     <dimen name="weather_icon_size_small">30dp</dimen>
 
-
     <dimen name="background_radius">12dp</dimen>
     <dimen name="background_radius_recycler">3dp</dimen>
     <dimen name="background_stroke_width">3dp</dimen>
     <dimen name="background_stroke_width_recycler">1dp</dimen>
 
+    <dimen name="margin_3">3dp</dimen>
     <dimen name="margin_6">6dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_24">24dp</dimen>
@@ -19,5 +19,6 @@
     <dimen name="small_text_size">10sp</dimen>
     <dimen name="default_text_size">20sp</dimen>
     <dimen name="large_text_size">30sp</dimen>
-    <dimen name="margin_3">3dp</dimen>
+
+    <dimen name="card_height">300dp</dimen>
 </resources>
