--- a/app/src/main/res/drawable/ic_weather_drop.xml
+++ b/app/src/main/res/drawable/ic_weather_drop.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/iconColor"
       android:pathData="M12,3.571c3.658,5.437 6,9.223 6,12.503 0,3.268 -2.691,5.926 -6,5.926s-6,-2.658 -6,-5.925c0,-3.281 2.341,-7.067 6,-12.504zM12,0c-4.87,7.197 -8,11.699 -8,16.075 0,4.378 3.579,7.925 8,7.925s8,-3.547 8,-7.925c0,-4.376 -3.13,-8.878 -8,-16.075z"/>
 </vector>
