--- a/app/src/main/res/layout/bottom_drawer_fragment.xml
+++ b/app/src/main/res/layout/bottom_drawer_fragment.xml
@@ -20,6 +20,7 @@
     <TextView
         android:id="@+id/text_username"
         android:layout_width="wrap_content"
+        style="@style/Theme.SimpleWeather"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_12"
         android:text="@string/sign_in_username"
