--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">#1976d2</color>
-    <color name="primaryLightColor">#63a4ff</color>
+    <color name="primaryColor">#0E2235</color>
+    <color name="primaryLightColor">#273953</color>
     <color name="primaryDarkColor">#004ba0</color>
     <color name="secondaryColor">#ffc107</color>
     <color name="secondaryLightColor">#fff350</color>
     <color name="secondaryDarkColor">#c79100</color>
     <color name="primaryTextColor">#ffffff</color>
     <color name="secondaryTextColor">#000000</color>
-    <color name="iconWeatherColor">#1D1D1B</color>
+    <color name="iconColor">#FFFFFD</color>
     <color name="decoratorColor">#386864</color>
 
 </resources>
