weather to views

--- a/app/src/main/res/layout/day_recycler_item.xml
+++ b/app/src/main/res/layout/day_recycler_item.xml
@@ -24,7 +24,7 @@
             android:contentDescription="@string/day_weather_pic"
             android:src="@drawable/ic_weather_sunny_day"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
         </ImageView>
@@ -35,8 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_12"
             android:text="@string/monday"
-            app:layout_constraintLeft_toRightOf="@id/iv_day_weather_recycler_item"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iv_day_weather_recycler_item"
             app:layout_constraintTop_toTopOf="parent">
 
         </TextView>
@@ -45,23 +45,23 @@
             android:id="@+id/tv_temp_day_recycler_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_48"
             android:layout_marginBottom="@dimen/margin_12"
             android:text="@string/temp_default_shown"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/iv_day_weather_recycler_item"
-            app:layout_constraintRight_toLeftOf="@id/tv_temp_night_recycler_item"
+            app:layout_constraintStart_toEndOf="@id/iv_day_weather_recycler_item"
             app:layout_constraintTop_toBottomOf="@id/tv_day_of_week_recycler_item">
 
         </TextView>
 
         <TextView
-            android:id="@+id/tv_temp_night_recycler_item"
+            android:id="@+id/tv_description_recycler_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_48"
             android:layout_marginBottom="@dimen/margin_12"
-            android:text="@string/temp_default_shown"
-            app:layout_constraintLeft_toRightOf="@id/tv_temp_day_recycler_item"
-            app:layout_constraintRight_toRightOf="parent"
+            android:text="@string/sunny"
+            app:layout_constraintStart_toEndOf="@id/tv_temp_day_recycler_item"
             app:layout_constraintTop_toBottomOf="@id/tv_day_of_week_recycler_item">
 
         </TextView>
